--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@ description:
     <img src="/images/about/about.jpg" class="img-responsive center-block img-thumbnail" alt="Water Show">
   </div>
   <div class="col-sm-6 col-md-6 margin-bottom-30 text-justify">
-    <p>Guangdong Watershow Fountain Equipment Project Co., Ltd established in 2004, professional in producing and selling fountain equipments.etc.</p>
+    <p>Guangdong Watershow Fountain Equipment Project Co., Ltd  is branch of Guangzhou Fenlin Swimming Pool & Sauna Equipment Co., Ltd established in 2004, professional in producing and selling fountain equipments.etc.</p>
     <p>Striving in creating, quality and service for these years, we have possessed our own brand, in the meantime, have developed our foreign market of around one hundred countries as well as developed a sales network covers most of the eastern big cities at home.<p>
     <p>We have over 14 years producting & sales exprencie, our factory can aviable OMD, OED, oversea fountain project installation service.</p>
     <p>Our Fountain Project cover Saudi Arabic, Sudan, Qatar, Egypt, Malaysia, ingapore，Kazakhstan so on many countries.</p>
