--- a/products/_posts/2018-08-02-floating-water-fountain.html
+++ b/products/_posts/2018-08-02-floating-water-fountain.html
@@ -5,7 +5,7 @@ category: products
 type-en: floating-fountain
 type: Large Fountain
 image: floating-water-fountain
-proimg: eight
+proimg: seven
 video: 285453496
 title: Floating Water Fountain
 keywords: Floating Water Fountain
