--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ full_title: WATER SHOW
     <div class="item active"><img src="/images/home/billboard-1.jpg" alt=""></div>
     <div class="item"><img src="/images/home/billboard-2.jpg" alt=""></div>
     <div class="item"><img src="/images/home/billboard-3.jpg" alt=""></div>
+    <div class="item"><img src="/images/home/billboard-4.jpg" alt=""></div>
   </div>
 </div>
 <div class="container margin-top-30">
