--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ full_title: WATER SHOW
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active"><img src="/images/home/billboard-1.jpg" alt=""></div>
