--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,9 @@ description:
 <div class="col-md-6 text-center margin-bottom-30">
   <h2 class="section-heading">Contact Info</h2>
   <p><i class="fa fa-map-marker ico-styled text-primary"></i> {{ site.address }}</p>
-  <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel }}">{{ site.tel }}</a></p>
+  <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel1 }}">{{ site.tel1 }}</a></p>
+  <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel2 }}">{{ site.tel2 }}</a>(Alina Li)</p>
+  <p><i class="fa fa-phone ico-styled text-primary"></i> <a href="tel:{{ site.tel3 }}">{{ site.tel3 }}</a>(Flair Wu)</p>
   <p><i class="fa fa-fax ico-styled text-primary"></i> {{ site.fax }}</p>
   <p><i class="fa fa-envelope ico-styled text-primary"></i> <a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
   <ul class="list-inline social-icons social-icons-small">
