--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@ layout: pages
 permalink: /about/
 category: about
 title: About Water Show
-keywords: 
+keywords: musical fountain
 description: 
 ---
 <div class="row">
