--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@ layout: pages
 permalink: /contact/
 category: contact
 title: Contact Us
-keywords: 
+keywords: musical fountain
 description: 
 ---
 <div class="col-md-6 text-center margin-bottom-30">
