--- a/pages/floating-fountain.html
+++ b/pages/floating-fountain.html
@@ -4,6 +4,6 @@ permalink: /floating-fountain/
 category: products
 type-en: floating-fountain
 title: Floating Fountain
-keywords: 
+keywords: musical fountain
 description: 
 ---
