--- a/pages/fountain-design.html
+++ b/pages/fountain-design.html
@@ -4,6 +4,6 @@ permalink: /fountain-design/
 category: products
 type-en: fountain-design
 title: Fountain Design
-keywords: 
+keywords: musical fountain
 description: 
 ---
