--- a/pages/fountain-lights.html
+++ b/pages/fountain-lights.html
@@ -4,6 +4,6 @@ permalink: /fountain-lights/
 category: products
 type-en: fountain-lights
 title: Fountain Lights
-keywords: 
+keywords: musical fountain
 description: 
 ---
