--- a/pages/fountain-nozzle.html
+++ b/pages/fountain-nozzle.html
@@ -4,6 +4,6 @@ permalink: /fountain-nozzle/
 category: products
 type-en: fountain-nozzle
 title: Fountain Nozzle
-keywords: 
+keywords: musical fountain
 description: 
 ---
