--- a/pages/fountain-project.html
+++ b/pages/fountain-project.html
@@ -4,6 +4,6 @@ permalink: /fountain-project/
 category: products
 type-en: fountain-project
 title: Fountain Project
-keywords: 
+keywords: musical fountain
 description: 
 ---
