--- a/pages/jumping-jet.html
+++ b/pages/jumping-jet.html
@@ -4,6 +4,6 @@ permalink: /jumping-jet/
 category: products
 type-en: jumping-jet
 title: Jumping Jet
-keywords: 
+keywords: musical fountain
 description: 
 ---
