--- a/pages/large-fountain.html
+++ b/pages/large-fountain.html
@@ -4,6 +4,6 @@ permalink: /large-fountain/
 category: products
 type-en: large-fountain
 title: Large Fountain
-keywords: 
+keywords: musical fountain
 description: 
 ---
