--- a/pages/middle-fountain.html
+++ b/pages/middle-fountain.html
@@ -4,6 +4,6 @@ permalink: /middle-fountain/
 category: products
 type-en: middle-fountain
 title: Middle Fountain
-keywords: 
+keywords: musical fountain
 description: 
 ---
