--- a/pages/news.html
+++ b/pages/news.html
@@ -3,7 +3,7 @@ layout: pages
 permalink: /news/
 category: news
 title: News
-keywords: 
+keywords: musical fountain
 description: 
 ---
 <div class="blog-masonry clearfix">
