--- a/pages/small-fountain.html
+++ b/pages/small-fountain.html
@@ -4,6 +4,6 @@ permalink: /small-fountain/
 category: products
 type-en: small-fountain
 title: Small Fountain
-keywords: 
+keywords: musical fountain
 description: 
 ---
