--- a/pages/water-rain-fountain.html
+++ b/pages/water-rain-fountain.html
@@ -4,6 +4,6 @@ permalink: /water-rain-fountain/
 category: products
 type-en: water-rain-fountain
 title: Water Rain Fountain
-keywords: 
+keywords: musical fountain
 description: 
 ---
