--- a/products/_posts/2018-02-06-ball-square-fountain.html
+++ b/products/_posts/2018-02-06-ball-square-fountain.html
@@ -8,7 +8,7 @@ image: ball-square-fountain
 proimg: six
 video: 286466367
 title: Ball Square Fountain
-keywords: Ball Square Fountain
+keywords: musical fountain
 description: Ball Square Fountain
 ---
 <div class="margin-bottom-30">
