--- a/products/_posts/2018-02-06-dancing-fountain.html
+++ b/products/_posts/2018-02-06-dancing-fountain.html
@@ -8,7 +8,7 @@ image: dancing-fountain
 proimg: six
 video: 285453496
 title: Dancing Fountain
-keywords: Dancing Fountain
+keywords: musical fountain
 description: Dancing Fountain
 ---
 <div class="margin-bottom-30">
