--- a/products/_posts/2018-07-28-rain-waterfall-fountain.html
+++ b/products/_posts/2018-07-28-rain-waterfall-fountain.html
@@ -8,7 +8,7 @@ image: rain-waterfall-fountain
 proimg: ten
 video: wu
 title: Rain Waterfall Fountain
-keywords: Rain Waterfall Fountain
+keywords: musical fountain
 description: Rain Waterfall Fountain
 ---
 <div class="margin-bottom-30">
