--- a/products/_posts/2018-07-30-floor-dry-fountain.html
+++ b/products/_posts/2018-07-30-floor-dry-fountain.html
@@ -8,7 +8,7 @@ image: floor-dry-fountain
 proimg: thirteen
 video: wu
 title: Floor Dry Fountain
-keywords: Floor Dry Fountain
+keywords: musical fountain
 description: Floor Dry Fountain
 ---
 <div class="margin-bottom-30">
