--- a/products/_posts/2018-08-02-floating-water-fountain.html
+++ b/products/_posts/2018-08-02-floating-water-fountain.html
@@ -8,7 +8,7 @@ image: floating-water-fountain
 proimg: seven
 video: 285453496
 title: Floating Water Fountain
-keywords: Floating Water Fountain
+keywords: musical fountain
 description: Floating Water Fountain
 ---
 <div class="margin-bottom-30">
