--- a/products/_posts/2018-08-06-high-jet-shooting-fountain.html
+++ b/products/_posts/2018-08-06-high-jet-shooting-fountain.html
@@ -8,7 +8,7 @@ image: high-jet-shooting-fountain
 proimg: nine
 video: wu
 title: High Jet Shooting Fountain
-keywords: High Jet Shooting Fountain
+keywords: musical fountain
 description: High Jet Shooting Fountain
 ---
 <div class="margin-bottom-30">
