--- a/products/_posts/2018-08-08-fog-fountain.html
+++ b/products/_posts/2018-08-08-fog-fountain.html
@@ -8,7 +8,7 @@ image: fog-fountain
 proimg: eight
 video: wu
 title: Fog Fountain
-keywords: Fog Fountain
+keywords: musical fountain
 description: Fog Fountain
 ---
 <div class="margin-bottom-30">
