--- a/products/_posts/2018-08-10-gas-explosion-water-fountain.html
+++ b/products/_posts/2018-08-10-gas-explosion-water-fountain.html
@@ -8,7 +8,7 @@ image: gas-explosion-water-fountain
 proimg: three
 video: wu
 title: Gas Explosion Water Fountain
-keywords: Gas Explosion Water Fountain
+keywords: musical fountain
 description: Gas Explosion Water Fountain
 ---
 <div class="margin-bottom-30">
