--- a/products/_posts/2018-08-12-fire-water-fountain.html
+++ b/products/_posts/2018-08-12-fire-water-fountain.html
@@ -8,7 +8,7 @@ image: fire-water-fountain
 proimg: seven
 video: wu
 title: Fire Water Fountain
-keywords: Fire Water Fountain
+keywords: musical fountain
 description: Fire Water Fountain
 ---
 <div class="margin-bottom-30">
