--- a/products/_posts/2018-08-16-string-graphic-water-curtain.html
+++ b/products/_posts/2018-08-16-string-graphic-water-curtain.html
@@ -8,7 +8,7 @@ image: string-graphic-water-curtain
 proimg: eight
 video: wu
 title: String Graphic Water Curtain
-keywords: String Graphic Water Curtain
+keywords: musical fountain
 description: String Graphic Water Curtain
 ---
 <table class="table table-bordered table-striped text-center margin-bottom-30">
