--- a/products/_posts/2018-08-18-round-graphic-water-curtain.html
+++ b/products/_posts/2018-08-18-round-graphic-water-curtain.html
@@ -8,7 +8,7 @@ image: round-graphic-water-curtain
 proimg: eleven
 video: wu
 title: Round Graphic Water Curtain
-keywords: Round Graphic Water Curtain
+keywords: musical fountain
 description: Round Graphic Water Curtain
 ---
 <table class="table table-bordered table-striped text-center margin-bottom-30">
