--- a/products/_posts/2018-08-20-variety-fountain.html
+++ b/products/_posts/2018-08-20-variety-fountain.html
@@ -8,7 +8,7 @@ image: variety-fountain
 proimg: four
 video: wu
 title: Variety Fountain
-keywords: Variety Fountain
+keywords: musical fountain
 description: Variety Fountain
 ---
 <div class="margin-bottom-30">
