--- a/products/_posts/2018-08-22-customized-water-fountain-design.html
+++ b/products/_posts/2018-08-22-customized-water-fountain-design.html
@@ -8,7 +8,7 @@ image: customized-water-fountain-design
 proimg: seven
 video: wu
 title: Customized Water Fountain Design
-keywords: Customized Water Fountain Design
+keywords: musical fountain
 description: Customized Water Fountain Design
 ---
 <div class="margin-bottom-30">
