--- a/products/_posts/2018-08-22-swining-dancing-water-fountain.html
+++ b/products/_posts/2018-08-22-swining-dancing-water-fountain.html
@@ -8,7 +8,7 @@ image: swining-dancing-water-fountain
 proimg: nine
 video: wu
 title: Swining Dancing Water Fountain
-keywords: Swining Dancing Water Fountain
+keywords: musical fountain
 description: Swining Dancing Water Fountain
 ---
 <div class="margin-bottom-30">
