--- a/products/_posts/2018-08-26-3d-dancing-fountain.html
+++ b/products/_posts/2018-08-26-3d-dancing-fountain.html
@@ -8,7 +8,7 @@ image: 3d-dancing-fountain
 proimg: nine
 video: wu
 title: 3D Dancing Fountain
-keywords: 3D Dancing Fountain
+keywords: musical fountain
 description: 3D Dancing Fountain
 ---
 <div class="margin-bottom-30">
