--- a/products/_posts/2018-08-28-running-dancing-fountain.html
+++ b/products/_posts/2018-08-28-running-dancing-fountain.html
@@ -8,7 +8,7 @@ image: running-dancing-fountain
 proimg: three
 video: wu
 title: Running Dancing Fountain
-keywords: Running Dancing Fountain
+keywords: musical fountain
 description: Running Dancing Fountain
 ---
 <div class="margin-bottom-30">
