--- a/products/_posts/2018-08-30-laminar-deck-jet-fountain.html
+++ b/products/_posts/2018-08-30-laminar-deck-jet-fountain.html
@@ -8,7 +8,7 @@ image: laminar-deck-jet-fountain
 proimg: seven
 video: wu
 title: Laminar Deck Jet Fountain
-keywords: Laminar Deck Jet Fountain
+keywords: musical fountain
 description: Laminar Deck Jet Fountain
 ---
 <div class="row">
