--- a/pages/dry-fountain.html
+++ b/pages/dry-fountain.html
@@ -4,6 +4,6 @@ permalink: /dry-fountain/
 category: products
 type-en: dry-fountain
 title: Dry Fountain
-keywords: 
+keywords: musical fountain
 description: 
 ---
