--- a/products/_posts/2018-11-05-30m-outdoor-musical-water-fountain.html
+++ b/products/_posts/2018-11-05-30m-outdoor-musical-water-fountain.html
@@ -1,5 +1,5 @@
 ---
-layout: products-article
+layout: products-article1
 permalink: /large-fountain/30m-outdoor-musical-water-fountain.html
 category: products
 type-en: large-fountain
@@ -15,22 +15,86 @@ description: 30m diameter civic center decorative musical fountain with colorful
 <p>This fountain project main consist of rotating fountain(outside ring) and one ring jet fountain, one set 4 tire music flower fountain, and whole fountain make look like a flower so cute and beautiful. According to PLC control system control lights , solenoid valve make water and fountain lights running at same and change color.</p>
 <p>Whole fountain water height during 3-10m, and whole fountain frame installation under floor, so that people can walk on floor playing fountain's water. So Happy.</p>
 <p>This type of fountain application to Amusement park, plaza decorate ect.</p>
-<h4>Fountain Parameter</h4>
-<p><b>Product Type:</b> 30m water fountain</p>
-<p><b>Material:</b>	stainless steel 304</p>
-<p><b>Voltage：</b> 110-380v/50-60hz</p>
-<p><b>Lights:</b> Stainless steel RGB AC24V</p>
-<p><b>Fountain size:</b> 30m</p>
-<p><b>Water Height:</b> 3-10m</p>
-<p><b>Fountain effect:</b> Rotating fountain, flower dancing music fountain</p>
-<p><b>Design:</b> Flower Fountain</p>
-<p><b>Accessories:</b> Fountain frame, nozzle, lights pump, controller, stainless steel valve, full set fountain</p>
-<p><b>Application:</b> Green landscape decorative</p>
-<p><b>Customized:</b> Accept Customize any design & size music fountain
-<p><b>Business Type:</b> Manufacturer</p>
-<h4>Main Fountain accessories</h4>
-<p align="center"><img class="img-responsive" src="/images/news/{{ page.image }}-8.jpg" alt="{{ page.keywords }}"></p>
-<h4>Hot sale products</h4>
-<p align="center"><img class="img-responsive" src="/images/news/{{ page.image }}-9.jpg" alt="{{ page.keywords }}"></p>
-<h4>Fountain Production</h4>
-<p align="center"><img class="img-responsive" src="/images/news/{{ page.image }}-10.jpg" alt="{{ page.keywords }}"></p>
+<table class="table table-bordered table-striped text-center margin-bottom-30">
+  <thead>
+    <tr>
+      <th class="text-center" colspan="2">Fountain Parameter</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Product Type</td>
+      <td>30m water fountain</td>
+    </tr>
+    <tr>
+      <td>Material</td>
+      <td>stainless steel 304</td>
+    </tr>
+    <tr>
+      <td>Voltage</td>
+      <td>110-380v/50-60hz</td>
+    </tr>
+    <tr>
+      <td>Lights</td>
+      <td>Stainless steel RGB AC24V</td>
+    </tr>
+    <tr>
+      <td>Fountain size</td>
+      <td>30m</td>
+    </tr>
+    <tr>
+      <td>Water Height</td>
+      <td>3-10m</td>
+    </tr>
+    <tr>
+      <td>Fountain effect</td>
+      <td>Rotating fountain, flower dancing music fountain</td>
+    </tr>
+    <tr>
+      <td>Design</td>
+      <td>Flower Fountain</td>
+    </tr>
+    <tr>
+      <td>Accessories</td>
+      <td>Fountain frame, nozzle, lights pump, controller, stainless steel valve, full set fountain</td>
+    </tr>
+    <tr>
+      <td>Application</td>
+      <td>Green landscape decorative</td>
+    </tr>
+    <tr>
+      <td>Customized</td>
+      <td>Accept Customize any design & size music fountain</td>
+    </tr>
+    <tr>
+      <td>Business Type</td>
+      <td>Manufacturer</td>
+    </tr>
+  </tbody>
+</table>
+<div class="row">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-2.jpg"><img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-3.jpg"><img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-4.jpg"><img src="/images/products/{{ page.image }}-4.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-5.jpg"><img src="/images/products/{{ page.image }}-5.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-6.jpg"><img src="/images/products/{{ page.image }}-6.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-7.jpg"><img src="/images/products/{{ page.image }}-7.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
+  </div>
+</div>
+<h4 align="center">Main Fountain accessories</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-8.jpg" alt="{{ page.keywords }}"></p>
+<h4 align="center">Hot sale products</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-9.jpg" alt="{{ page.keywords }}"></p>
+<h4 align="center">Fountain Production</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-10.jpg" alt="{{ page.keywords }}"></p>
