--- a/products/_posts/2018-11-05-30m-outdoor-musical-water-fountain.html
+++ b/products/_posts/2018-11-05-30m-outdoor-musical-water-fountain.html
@@ -15,7 +15,7 @@ description: 30m diameter civic center decorative musical fountain with colorful
 <p>This fountain project main consist of rotating fountain(outside ring) and one ring jet fountain, one set 4 tire music flower fountain, and whole fountain make look like a flower so cute and beautiful. According to PLC control system control lights , solenoid valve make water and fountain lights running at same and change color.</p>
 <p>Whole fountain water height during 3-10m, and whole fountain frame installation under floor, so that people can walk on floor playing fountain's water. So Happy.</p>
 <p>This type of fountain application to Amusement park, plaza decorate ect.</p>
-<table class="table table-bordered table-striped text-center margin-bottom-30">
+<table class="table table-bordered table-striped text-center margin-top-30 margin-bottom-30">
   <thead>
     <tr>
       <th class="text-center" colspan="2">Fountain Parameter</th>
