--- a/products/_posts/2018-11-08-water-feature-rain-waterfall-fountain.html
+++ b/products/_posts/2018-11-08-water-feature-rain-waterfall-fountain.html
@@ -13,7 +13,7 @@ description: rain watefall feature can decorative indoor or outdoor backyard
 <h4>Description</h4>
 <p>Rain water curtains known as water walls and look like a water sheet that slides over a vertical flat surface. But the options can also include other solutions such as stainless steel, marble or any rigid, even and waterproof material that resists water damage. They are contemporary and elegant, quite appropriate for indoor spaces where quietness is a must. These fountains do not generate splashing or loud noise: the water sheet creates a constant and balanced movement that together with the light reflections and the fountain’s freshness makes up beautiful installations.</p>
 <p>As stated before, in this kind of waterfalls the upright walls over which the liquid flows must be completely flat, even and waterproof in order to make flow easy. There is no problem with glass panes, but in ceramic walls horizontal joints can be a disadvantage. In order to minimize them we can use laser-cut rectified porcelain tiles with perfect 90-degree edges. These tiles can be installed with no joints at all, so water will not crash into them or separate from the wall. Regardless water flows on a glass surface or on a ceramic wall, the surface must slope slightly in order to prevent water from separating when falling.</p>
-<h4>Operation and installation</h4>
+<h4 class="margin-top-30">Operation and installation</h4>
 <p>Water walls mount distribution pipes that carry water to the top of the upright wall or pane and let it out through small steel nozzles. The pipe is fed by two side deliveries; when the wall is too wide, a third central nozzle can be added to provide the required flow. In order to get the installation integrated or dissimulated, we can choose visible inox pipes or hide the system behind a skirt made of metal or other good-looking material. This is a very common solution.</p>
 <table class="table table-bordered table-striped text-center margin-top-30 margin-bottom-30">
   <thead>
@@ -60,7 +60,7 @@ description: rain watefall feature can decorative indoor or outdoor backyard
     </tr>
   </tbody>
 </table>
-<h4 align="center">Fountain effect picture</h4>
+<h4 class="text-center margin-top-30">Fountain effect picture</h4>
 <div class="row">
   <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-2.jpg"><img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
@@ -81,9 +81,9 @@ description: rain watefall feature can decorative indoor or outdoor backyard
     <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-7.jpg"><img src="/images/products/{{ page.image }}-7.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
   </div>
 </div>
-<h4 align="center">Main Fountain accessories</h4>
-<p align="center"><img class="img-responsive" src="/images/news/{{ page.image }}-8.jpg" alt="{{ page.keywords }}"></p>
-<h4 align="center">Hot sale products</h4>
-<p align="center"><img class="img-responsive" src="/images/news/{{ page.image }}-9.jpg" alt="{{ page.keywords }}"></p>
-<h4 align="center">Fountain Production</h4>
-<p align="center"><img class="img-responsive" src="/images/news/{{ page.image }}-10.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Main Fountain accessories</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-8.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Hot sale products</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-9.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Fountain Production</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-10.jpg" alt="{{ page.keywords }}"></p>
