--- a/products/_posts/2018-11-11-landscape-stainless-steel-circle-water-fountain.html
+++ b/products/_posts/2018-11-11-landscape-stainless-steel-circle-water-fountain.html
@@ -8,7 +8,7 @@ image: landscape-stainless-steel-circle-water-fountain
 video: WU
 title: Landscape stainless steel circle water fountain
 keywords: musical fountain
-description:this fountain small look like a bowl, fountain center is bubble fountain effect
+description: this fountain small look like a bowl, fountain center is bubble fountain effect.
 ---
 <h4>Description</h4>
 <p>Garden fountains are so welcomed in every yard. Those amazing additions can bring life and motion to your front yard and garden. Garden fountains engage the senses with the soothing sound. Garden fountain also can enhance the look of your garden or patio and that is the biggest reason why you need fountain in your yard or garden landscape. Other benefits of having a fountain in your yard are: they can be used as a way to invite your guests into your home to spend a time enjoying and relaxing in your garden, the peaceful sounds of running water can be a big help in times of stress, the trickling water has benefit of helping to block out background noise and can give your lawn a serene and natural sound and appearance.</p>
