--- a/products/_posts/2018-11-12-15m-by-5m-russia-combination-running-musical-fountain-project.html
+++ b/products/_posts/2018-11-12-15m-by-5m-russia-combination-running-musical-fountain-project.html
@@ -8,7 +8,7 @@ image: 15m-by-5m-russia-combination-running-musical-fountain-project
 video: 300900139
 title: 15m by 5m Russia Combination Running Musical Fountain Project
 keywords: musical fountain
-description:this fountain is square shape with running fountain and swing fountain combination together
+description: this fountain is square shape with running fountain and swing fountain combination together.
 ---
 <h4>Description</h4>
 <p>This large modern water fountain is customized according to client's requirement.It is made up of a rectangle shape 15m by 5m outside,and inside is like a oval shape fountain with running effect.It looks very beautiful when it working,especially with the rgb colorful fountain light at night.</p>
