--- a/products/_posts/2018-11-06-rystal-ball-dandelion-nozzle-fountain-stainless-steel.html
+++ b/products/_posts/2018-11-06-rystal-ball-dandelion-nozzle-fountain-stainless-steel.html
@@ -85,4 +85,7 @@ description: crown ring cystal ball water musicl fountain
 <p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-9.jpg" alt="{{ page.keywords }}"></p>
 <h4 class="text-center margin-top-30">Fountain Production</h4>
 <p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-10.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Company Information</h4>
 <p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-11.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Certification</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-12.jpg" alt="{{ page.keywords }}"></p>
