--- a/products/_posts/2018-12-01-water-feature-garden-large-dancing-music-fountain.html
+++ b/products/_posts/2018-12-01-water-feature-garden-large-dancing-music-fountain.html
@@ -85,4 +85,7 @@ description: new design crescemt shape musical water fountain
 <p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-9.jpg" alt="{{ page.keywords }}"></p>
 <h4 class="text-center margin-top-30">Fountain Production</h4>
 <p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-10.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Company Information</h4>
 <p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-11.jpg" alt="{{ page.keywords }}"></p>
+<h4 class="text-center margin-top-30">Certification</h4>
+<p align="center"><img class="img-responsive" src="/images/products/{{ page.image }}-12.jpg" alt="{{ page.keywords }}"></p>
