--- a/products/_posts/2018-12-04-stainless-steel-cascade-fountain-nozzle.html
+++ b/products/_posts/2018-12-04-stainless-steel-cascade-fountain-nozzle.html
@@ -1,12 +1,12 @@
 ---
 layout: products-article
-permalink: /fountain-nozzle/stainless-steel-304-water-screen-fountain-nozzle.html
+permalink: /fountain-nozzle/stainless-steel-cascade-fountain-nozzle.html
 category: products
 type-en: fountain-nozzle
 type: Fountain Nozzle
-image: stainless-steel-304-water-screen-fountain-nozzle
+image: stainless-steel-cascade-fountain-nozzle
 video: 306128648
-title: Stainless Steel 304 Water Screen Fountain Nozzle
+title: Stainless Steel Cascade Fountain Nozzle
 keywords: musical fountain
 description: cascade nozzle can make foam jet effect fountain
 ---
@@ -58,7 +58,22 @@ description: cascade nozzle can make foam jet effect fountain
       <td>8-20</td>
       <td>1-8</td>
       <td>0.6</td>
-      
+    </tr>
+    <tr>
+      <td>3011</td>
+      <td>2''</td>
+      <td>50-400</td>
+      <td>12-25</td>
+      <td>1-10</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>3012</td>
+      <td>3''</td>
+      <td>80-550</td>
+      <td>18-35</td>
+      <td>1-15</td>
+      <td>2</td>
     </tr>
   </tbody>
 </table>
