--- a/products/_posts/2018-12-07-stainless-steel-finger-jet-fountain-nozzle.html
+++ b/products/_posts/2018-12-07-stainless-steel-finger-jet-fountain-nozzle.html
@@ -1,17 +1,17 @@
 ---
 layout: products-article
-permalink: /fountain-nozzle/stainless-steel-304-water-screen-fountain-nozzle.html
+permalink: /fountain-nozzle/stainless-steel-finger-jet-fountain-nozzle.html
 category: products
 type-en: fountain-nozzle
 type: Fountain Nozzle
-image: stainless-steel-304-water-screen-fountain-nozzle
-video: 306128648
-title: Stainless Steel 304 Water Screen Fountain Nozzle
+image: stainless-steel-finger-jet-fountain-nozzle
+video: wu
+title: Stainless Steel Finger Jet Fountain Nozzle
 keywords: musical fountain
-description: cascade nozzle can make foam jet effect fountain
+description: full stainless steel finger fountain nozzle effect like peacock
 ---
 <h4>Description</h4>
-<p>Cascade nozzle is a small to large non-adjustable injector nozzle generates a lively full water pattern and offers oxygen enrichment. With injector effect, water and air are suctioned in, mixed intensively and accelerated into the air by the injector jet as an impressive soft flowing fountain. The foam effect changes depending on the water level and accentuates every public area.</p> 
+<p>Finger jet produces a delicate, arching spray pattern using precision clear stream jets. Material is full stainless steel and inside small fountain nozzle is can adjustable direction.</p>
 <table class="table table-bordered table-striped text-center margin-top-30 margin-bottom-30">
   <thead>
     <tr>
@@ -25,40 +25,31 @@ description: cascade nozzle can make foam jet effect fountain
       <td>Pressure(kpa)</td>
       <td>Flow(m3/h)</td>
       <td>Height(m)</td>
-      <td>Water Width(m)</td>
+      <td>Water diameter(m)</td>
     </tr>
     <tr>
-      <td>3007</td>
-      <td>0.5''</td>
-      <td>40-200</td>
-      <td>1-2</td>
-      <td>1-4</td>
-      <td>0.2</td>
-    </tr>
-    <tr>
-      <td>3008</td>
+      <td>8024</td>
       <td>3/4''</td>
-      <td>40-200</td>
+      <td>50-70</td>
       <td>2-4</td>
-      <td>1-4</td>
-      <td>0.2</td>
+      <td>2-3</td>
+      <td>1-1.5</td>
     </tr>
     <tr>
-      <td>3009</td>
+      <td>8025</td>
       <td>1''</td>
-      <td>40-200</td>
-      <td>6-10</td>
-      <td>1-4</td>
-      <td>0.3</td>
+      <td>50-80</td>
+      <td>5-8</td>
+      <td>2-3</td>
+      <td>1-1.5</td>
     </tr>
     <tr>
-      <td>3010</td>
+      <td>8026</td>
       <td>1.5''</td>
-      <td>50-330</td>
-      <td>8-20</td>
-      <td>1-8</td>
-      <td>0.6</td>
-      
+      <td>50-150</td>
+      <td>7-10</td>
+      <td>2-3</td>
+      <td>1-1.5</td>
     </tr>
   </tbody>
 </table>
