--- a/products/_posts/2018-12-08-ss-304-cup-bubble-fountain-nozzle.html
+++ b/products/_posts/2018-12-08-ss-304-cup-bubble-fountain-nozzle.html
@@ -1,17 +1,17 @@
 ---
 layout: products-article
-permalink: /fountain-nozzle/stainless-steel-304-water-screen-fountain-nozzle.html
+permalink: /fountain-nozzle/ss-304-cup-bubble-fountain-nozzle.html
 category: products
 type-en: fountain-nozzle
 type: Fountain Nozzle
-image: stainless-steel-304-water-screen-fountain-nozzle
-video: 306128648
-title: Stainless Steel 304 Water Screen Fountain Nozzle
+image: ss-304-cup-bubble-fountain-nozzle
+video: 306142778
+title: SS304 Cup Bubble Fountain Nozzle
 keywords: musical fountain
-description: cascade nozzle can make foam jet effect fountain
+description: cup bubble is a small size injector nozzle generates a lively full water pattern and offers oxygen enrichment
 ---
 <h4>Description</h4>
-<p>Cascade nozzle is a small to large non-adjustable injector nozzle generates a lively full water pattern and offers oxygen enrichment. With injector effect, water and air are suctioned in, mixed intensively and accelerated into the air by the injector jet as an impressive soft flowing fountain. The foam effect changes depending on the water level and accentuates every public area.</p> 
+<p>Cup bubble fountain nozzle is full stainless steel 304. It water effect is lowe foam effect With injector effect, water and air are suctioned in, mixed intensively and accelerated into the air by the injector jet as an impressive soft flowing fountain. The foam (spume) effect changes depending on the water level.</p>
 <table class="table table-bordered table-striped text-center margin-top-30 margin-bottom-30">
   <thead>
     <tr>
@@ -25,40 +25,23 @@ description: cascade nozzle can make foam jet effect fountain
       <td>Pressure(kpa)</td>
       <td>Flow(m3/h)</td>
       <td>Height(m)</td>
-      <td>Water Width(m)</td>
+      <td>Water diameter(m)</td>
     </tr>
     <tr>
-      <td>3007</td>
-      <td>0.5''</td>
-      <td>40-200</td>
-      <td>1-2</td>
-      <td>1-4</td>
-      <td>0.2</td>
-    </tr>
-    <tr>
-      <td>3008</td>
-      <td>3/4''</td>
-      <td>40-200</td>
-      <td>2-4</td>
-      <td>1-4</td>
-      <td>0.2</td>
-    </tr>
-    <tr>
-      <td>3009</td>
+      <td>4012</td>
       <td>1''</td>
-      <td>40-200</td>
-      <td>6-10</td>
-      <td>1-4</td>
-      <td>0.3</td>
+      <td>50-100</td>
+      <td>3.5-8</td>
+      <td>0.3-0.5</td>
+      <td>0.2-0.4</td>
     </tr>
     <tr>
-      <td>3010</td>
+      <td>4013</td>
       <td>1.5''</td>
-      <td>50-330</td>
-      <td>8-20</td>
-      <td>1-8</td>
-      <td>0.6</td>
-      
+      <td>50-100</td>
+      <td>10-18</td>
+      <td>0.4-0.8</td>
+      <td>0.3-0.6</td>
     </tr>
   </tbody>
 </table>
