--- a/products/_posts/2018-12-06-8-arm-windmill-rotary-fountain-nozzle.html
+++ b/products/_posts/2018-12-06-8-arm-windmill-rotary-fountain-nozzle.html
@@ -1,17 +1,17 @@
 ---
 layout: products-article
-permalink: /fountain-nozzle/stainless-steel-304-water-screen-fountain-nozzle.html
+permalink: /fountain-nozzle/8-arm-windmill-rotary-fountain-nozzle.html
 category: products
 type-en: fountain-nozzle
 type: Fountain Nozzle
-image: stainless-steel-304-water-screen-fountain-nozzle
-video: 306128648
-title: Stainless Steel 304 Water Screen Fountain Nozzle
+image: 8-arm-windmill-rotary-fountain-nozzle
+video: wu
+title: 8 Arm Windmill Rotary Fountain Nozzle
 keywords: musical fountain
-description: cascade nozzle can make foam jet effect fountain
+description: 8 arm windmill roatry nozzle full stainless steel 304
 ---
 <h4>Description</h4>
-<p>Cascade nozzle is a small to large non-adjustable injector nozzle generates a lively full water pattern and offers oxygen enrichment. With injector effect, water and air are suctioned in, mixed intensively and accelerated into the air by the injector jet as an impressive soft flowing fountain. The foam effect changes depending on the water level and accentuates every public area.</p> 
+<p>This is 8 arm windmill nozzles, nozzle can rotating multi stream creates clear jets in animated swirling, spinning effect. Rotation is done via water output from eight-angled nozzle. Rotation, speed and display size are adjustable with the water control valve. Windmill are medium and large size nozzles that are water level independent.</p> 
 <table class="table table-bordered table-striped text-center margin-top-30 margin-bottom-30">
   <thead>
     <tr>
@@ -25,40 +25,31 @@ description: cascade nozzle can make foam jet effect fountain
       <td>Pressure(kpa)</td>
       <td>Flow(m3/h)</td>
       <td>Height(m)</td>
-      <td>Water Width(m)</td>
+      <td>Water Diameter(m)</td>
     </tr>
     <tr>
-      <td>3007</td>
-      <td>0.5''</td>
-      <td>40-200</td>
-      <td>1-2</td>
-      <td>1-4</td>
-      <td>0.2</td>
-    </tr>
-    <tr>
-      <td>3008</td>
-      <td>3/4''</td>
-      <td>40-200</td>
-      <td>2-4</td>
-      <td>1-4</td>
-      <td>0.2</td>
-    </tr>
-    <tr>
-      <td>3009</td>
+      <td>8006</td>
       <td>1''</td>
-      <td>40-200</td>
-      <td>6-10</td>
-      <td>1-4</td>
-      <td>0.3</td>
+      <td>75</td>
+      <td>3.5</td>
+      <td>3</td>
+      <td>1-1.5</td>
     </tr>
     <tr>
-      <td>3010</td>
+      <td>8007</td>
       <td>1.5''</td>
-      <td>50-330</td>
-      <td>8-20</td>
-      <td>1-8</td>
-      <td>0.6</td>
-      
+      <td>100</td>
+      <td>10</td>
+      <td>4</td>
+      <td>1.5-2.5</td>
+    </tr>
+    <tr>
+      <td>8008</td>
+      <td>2''</td>
+      <td>150</td>
+      <td>18</td>
+      <td>6</td>
+      <td>1.5-4</td>
     </tr>
   </tbody>
 </table>
