--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,9 +17,8 @@ description:
   <ul class="list-inline social-icons social-icons-small">
     <li><a href="{{ site.facebook }}" target="_blank" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
     <li><a href="{{ site.twitter }}" target="_blank" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="{{ site.youtube }}" target="_blank" class="youtube-bg"><i class="fa fa-youtube"></i></a></li>
+    <li><a href="{{ site.youtube }}" target="_blank" class="youtube-bg"><i class="fa fa-youtube-play"></i></a></li>
     <li><a href="{{ site.linkedin }}" target="_blank" class="linkedin-bg"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="{{ site.googleplus }}" target="_blank" class="google-plus-bg"><i class="fa fa-google-plus"></i></a></li>
     <li><a href="{{ site.pinterest }}" target="_blank" class="pinterest-bg"><i class="fa fa-pinterest"></i></a></li>
   </ul>
 </div>
