--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@ full_title: WATER SHOW-musical fountain
     <li data-target="#carousel-example-generic" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-    <div class="item active"><img src="/images/home/billboard-1.jpg" alt=""></div>
-    <div class="item"><img src="/images/home/billboard-2.jpg" alt=""></div>
-    <div class="item"><img src="/images/home/billboard-3.jpg" alt=""></div>
-    <div class="item"><img src="/images/home/billboard-4.jpg" alt=""></div>
+    <div class="item active"><img src="{{ site.url }}/images/home/billboard-1.jpg" alt=""></div>
+    <div class="item"><img src="{{ site.url }}/images/home/billboard-2.jpg" alt=""></div>
+    <div class="item"><img src="{{ site.url }}/images/home/billboard-3.jpg" alt=""></div>
+    <div class="item"><img src="{{ site.url }}/images/home/billboard-4.jpg" alt=""></div>
   </div>
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="fa fa-chevron-left" aria-hidden="true">&lt;</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="fa fa-chevron-right" aria-hidden="true">&gt;</span>
+  </a>
 </div>
 <div class="container margin-top-30">
   {% include products-list.html %}
