--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ full_title: WATER SHOW-musical fountain
     <li data-target="#carousel-example-generic" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-    <div class="item active"><img src="{{ site.url }}/images/home/billboard-1.jpg" alt=""></div>
-    <div class="item"><img src="{{ site.url }}/images/home/billboard-2.jpg" alt=""></div>
-    <div class="item"><img src="{{ site.url }}/images/home/billboard-3.jpg" alt=""></div>
-    <div class="item"><img src="{{ site.url }}/images/home/billboard-4.jpg" alt=""></div>
+    <div class="item active"><img src="/images/home/billboard-1.jpg" alt=""></div>
+    <div class="item"><img src="/images/home/billboard-2.jpg" alt=""></div>
+    <div class="item"><img src="/images/home/billboard-3.jpg" alt=""></div>
+    <div class="item"><img src="/images/home/billboard-4.jpg" alt=""></div>
   </div>
 </div>
 <div class="container margin-top-30">
@@ -24,7 +24,7 @@ full_title: WATER SHOW-musical fountain
       <h2 class="heading">About Water Show</h2>
     </div>
     <div class="col-sm-6 col-md-6 margin-bottom-30">
-      <a data-fancybox href="https://youtu.be/B1XiG08JFzs"><img src="/images/home/about-video.jpg" class="img-responsive center-block img-thumbnail" alt="Water Show"></a>
+      <a href="https://youtu.be/B1XiG08JFzs" target="_blank"><img src="/images/home/about-video.jpg" class="img-responsive center-block img-thumbnail" alt="Water Show"></a>
     </div>
     <div class="col-sm-6 col-md-6 margin-bottom-30 text-justify">
       <p>Guangdong Watershow Fountain Equipment Project Co., Ltd established in 2004, professional in producing and selling fountain equipments.etc.</p>
