--- a/pages/news.html
+++ b/pages/news.html
@@ -6,7 +6,7 @@ title: News
 keywords: musical fountain
 description: 
 ---
-<div class="blog-masonry clearfix">
+<div class="blog-masonry">
   <div class="row">{% for post in site.categories["news"] %}
     <div itemscope itemtype="http://schema.org/Article">
       <div class="col-sm-12 col-md-12 margin-bottom-30">
