--- a/products/_posts/2019-09-16-dry-deck-fountain.html
+++ b/products/_posts/2019-09-16-dry-deck-fountain.html
@@ -2,8 +2,84 @@
 layout: products-article
 permalink: /products/dry-deck-fountain.html
 category: products
+installation: installation
 image: dry-deck-fountain
 title: Dry Deck Fountain
 keywords: musical fountain
 description: 
 ---
+<h4 class="margin-top-30"></h4>
+<p></p>
+<div class="row margin-top-30">
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-1.jpg"><img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-4.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-5.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-6.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-7.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-8.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-9.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-10.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-11.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-12.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-13.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+</div>
+<h4 class="margin-top-30"></h4>
+<p class="margin-top-30"><b></b></p>
+<p></p>
+<p class="margin-top-30"><b></b></p>
+<p></p>
+<h4 class="margin-top-30"></h4>
+<p class="margin-top-30"><b></b></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p class="margin-top-30"><b></b></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p class="margin-top-30"><b></p>
+<p></p>
+<p></p>
+<h4 class="margin-top-30"></h4>
+<p></p> 
+<p></p>
+<p></p>
+<p></p>
