--- a/products/_posts/2019-09-20-customize-music-fountain.html
+++ b/products/_posts/2019-09-20-customize-music-fountain.html
@@ -1,15 +1,15 @@
 ---
 layout: products-article
-permalink: /products/digital-water-curtain.html
+permalink: /products/customize-music-fountain.html
 category: products
 installation: installation
-image: digital-water-curtain
-title: Digital Water Curtain
+image: customize-music-fountain
+title: Customize Music Fountain
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30"></h4>
-<p></p>
+<h4 class="margin-top-30">Simple introduction of Customize music fountain</h4>
+<p>Specializing in music fountain, our company is leading music fountain manufacturers.Music fountain is one of the most romantic leisure entertainment,beautiful colors changes at night, various water movement follows music rhythm, it is a magnificent visual and auditory feast.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-1.jpg"><img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
@@ -54,32 +54,9 @@ description:
     <img src="/images/products/{{ page.image }}-14.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
 </div>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></b></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p class="margin-top-30"><b></p>
-<p></p>
-<p></p>
-<h4 class="margin-top-30"></h4>
-<p></p> 
-<p></p>
-<p></p>
-<p></p>
+<h4 class="margin-top-30">Feature of customize music fountain</h4>
+<p class="margin-top-30"><b>1.Cheap price</b></p>
+<p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
+<p class="margin-top-30"><b>2.Unique</b></p>
+<p>"Water is spiritual, every moment of the water column is unique, just like the course of life. They are the greatest dancers, can't be shaped, never repeat.</p>
+<p class="margin-top-30"><b>3. Any design and size accept customize</b></p>
