--- a/products/_posts/2019-09-22-small-water-fountain.html
+++ b/products/_posts/2019-09-22-small-water-fountain.html
@@ -2,81 +2,57 @@
 layout: products-article
 permalink: /products/small-water-fountain.html
 category: products
+installation: installation
 image: small-water-fountain
 title: Small Water Fountain
 keywords: musical fountain
 description: 
 ---
-<h4 class="margin-top-30">1）Simple introduction of small water fountain</h4>
+<h4 class="margin-top-30">Simple introduction of small water fountain</h4>
 <p>FS series water fountain is regular customize fountain design, any size fountain can customize. Fountain water will be dancing according to music rhythm, led lighhts color change automatic. Installation is very easy, fountain frame is can removeble, more easy for shipping. fountain need small space to installate.Tis design fountain simple and fresh, very suitable swimming pool, shopping mall, or hotel decoration, garden or landscaping decorative.</p>
 <div class="row margin-top-30">
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-1.jpg"><img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-2.jpg"><img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-3.jpg"><img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-4.jpg"><img src="/images/products/{{ page.image }}-4.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-5.jpg"><img src="/images/products/{{ page.image }}-5.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-6.jpg"><img src="/images/products/{{ page.image }}-6.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-7.jpg"><img src="/images/products/{{ page.image }}-7.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-8.jpg"><img src="/images/products/{{ page.image }}-8.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-9.jpg"><img src="/images/products/{{ page.image }}-9.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-10.jpg"><img src="/images/products/{{ page.image }}-10.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-11.jpg"><img src="/images/products/{{ page.image }}-11.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-12.jpg"><img src="/images/products/{{ page.image }}-12.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-        <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-13.jpg"><img src="/images/products/{{ page.image }}-13.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}"></a>
-      </div>
-    </div>
-<h4 class="margin-top-30">2）Feature of small water fountain</h4>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-1.jpg"><img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-3.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-4.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-5.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-6.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-7.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-8.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-9.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-10.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-11.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-12.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+    <img src="/images/products/{{ page.image }}-13.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+  </div>
+</div>
+<h4 class="margin-top-30">Feature of small water fountain</h4>
 <p class="margin-top-30"><b>1.cheap price</b></p>
 <p>Our company is an integrated enterprise with the ability to design, produce and install.We have international advanced.So we have advantages in price.</p>
 <p class="margin-top-30"><b>2.easy to install and remove</b></p>
 <p>The small water fountain Occupy less floor area. It has less accessories and it is simple to install and remove.</p>
-<h4 class="margin-top-30">3) Our Service</h4>
-<p class="margin-top-30"><b>A.Pre-sale service</b></p>
-<p>Listenning clients requirements</p>
-<p>Giving suggestion and good guidance to build a fountain</p>
-<p>Free technical support (Design sketch, Drawing, Animation video we have)</p>
-<p>Accounting Competitive price</p>
-<p>Listing detailed accessories and show detail description</p>
-<p class="margin-top-30"><b>B.In the sale service</b></p>
-<p>Pro-active offering production process pictures</p>
-<p>Effective communication</p>
-<p>Update news timely</p>
-<p>Check on a cheap courier on clients request</p>
-<p>Provding user or installation manual</p>
-<p>Enough spare parts</p>
-<p>Arrange shipping on clients request</p>
-<p>Preparing Customs cleanrance documents and send by DHL on clients request</p>
-<p class="margin-top-30"><b>C. After sale service</b></p>
-<p>Provide technical help by phone</p>
-<p>Be available at phone and email, we will give the solution in 24 hours.</p>
-<p>Quality investigation</p>
-<h4 class="margin-top-30">4）Installation procedure of small water fountain</h4>
-<p>1. Connect fountain frame with bolts</p> 
-<p>2. Connect fountain pump with connection</p>
-<p>3. Find the cables from the fountain frame,and connect to the  music controller</p>
-<p>4. Adjust all nozzles to be vertical,turn on the fountain by the music controller</p>
