--- a/products/_posts/2019-09-20-customize-music-fountain.html
+++ b/products/_posts/2019-09-20-customize-music-fountain.html
@@ -12,7 +12,7 @@ description:
 <p>Specializing in music fountain, our company is leading music fountain manufacturers.Music fountain is one of the most romantic leisure entertainment,beautiful colors changes at night, various water movement follows music rhythm, it is a magnificent visual and auditory feast.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-1.jpg"><img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+    <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
