--- a/products/_posts/2019-09-22-small-water-fountain.html
+++ b/products/_posts/2019-09-22-small-water-fountain.html
@@ -12,7 +12,7 @@ description:
 <p>FS series water fountain is regular customize fountain design, any size fountain can customize. Fountain water will be dancing according to music rhythm, led lighhts color change automatic. Installation is very easy, fountain frame is can removeble, more easy for shipping. fountain need small space to installate.Tis design fountain simple and fresh, very suitable swimming pool, shopping mall, or hotel decoration, garden or landscaping decorative.</p>
 <div class="row margin-top-30">
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-    <a data-fancybox="{{ page.title }}" data-caption="{{ page.title }}" href="/images/products/{{ page.image }}-1.jpg"><img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
+    <img src="/images/products/{{ page.image }}-1.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
     <img src="/images/products/{{ page.image }}-2.jpg" class="img-responsive center-block img-thumbnail margin-bottom-30" alt="{{ page.title }}">
